examples/errors/parsing/sort-noparam-no-lbrace.cn
sort Foo = Bar

main : () [impure] = ()
